@@ -1,5 +1,6 @@
 package webserver.handler.handlerAdapter;
 
+import static app.config.GlobalConfig.SUFFIX;
 import static util.Constant.CONTENT_LENGTH;
 import static util.Constant.CONTENT_TYPE;
 import static util.Constant.INDEX_PATH;
@@ -16,8 +17,10 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Parameter;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -31,10 +34,14 @@ import app.http.HttpResponse;
 import app.http.HttpStatus;
 import app.http.HttpVersion;
 import app.http.Mime;
+import app.model.user.User;
 import webserver.handler.HandlerMethod;
 import webserver.handler.typeResolver.HttpResponseTypeResolver;
 import webserver.handler.typeResolver.MapTypeResolver;
+import webserver.handler.typeResolver.ModelTypeResolver;
 import webserver.handler.typeResolver.TypeResolver;
+import webserver.template.Model;
+import webserver.template.TemplateEngine;
 
 public class DefaultHandlerAdapter implements HandlerAdapter {
     private static final Logger log = LoggerFactory.getLogger(DefaultHandlerAdapter.class);
@@ -43,6 +50,7 @@ public class DefaultHandlerAdapter implements HandlerAdapter {
     static {
         typeResolver.put(Map.class, MapTypeResolver.getInstance());
         typeResolver.put(HttpResponse.class, HttpResponseTypeResolver.getInstance());
+        typeResolver.put(Model.class, ModelTypeResolver.getInstance());
     }
 
     @Override
@@ -57,15 +65,16 @@ public class DefaultHandlerAdapter implements HandlerAdapter {
     public void handle(HttpRequest request, HttpResponse response, HandlerMethod handlerMethod) throws CustomException {
         try {
             Method method = handlerMethod.getMethod();
-            List<Object> arguments = getArgument(request, response, handlerMethod);
+            Model model = Model.from();
+            List<Object> arguments = getArgument(request, response, handlerMethod, model);
             String path;
             if (arguments == null) {
                 path = (String) method.invoke(handlerMethod.getClazz().getConstructor().newInstance());
-                setResponse(request, response, path);
+                setResponse(request, response, path, model);
                 return;
             }
             path = (String) method.invoke(handlerMethod.getClazz().getConstructor().newInstance(), arguments.toArray());
-            setResponse(request, response, path);
+            setResponse(request, response, path, model);
         } catch (IllegalAccessException | InvocationTargetException | IllegalArgumentException | NoSuchMethodException | InstantiationException e) {
             log.error("error during handle: " + e.getClass().getName());
             Throwable exception = e.getCause();
@@ -75,13 +84,13 @@ public class DefaultHandlerAdapter implements HandlerAdapter {
         }
     }
 
-    public List<Object> getArgument(HttpRequest request, HttpResponse response, HandlerMethod handlerMethod) {
+    public List<Object> getArgument(HttpRequest request, HttpResponse response, HandlerMethod handlerMethod, Model model) {
         List<Object> arguments = new ArrayList<>();
         Parameter[] parameters = handlerMethod.getMethod().getParameters();
         for (Parameter parameter : parameters) {
             if (typeResolver.containsKey(parameter.getType())) {
                 arguments.add(typeResolver.get(parameter.getType())
-                                          .getType(request, response));
+                                          .getType(request, response, model));
             }
         }
         if (arguments.size() == 0) {
@@ -90,7 +99,15 @@ public class DefaultHandlerAdapter implements HandlerAdapter {
         return arguments;
     }
 
-    private void setResponse(HttpRequest request, HttpResponse response, String path) {
+    private void setResponse(HttpRequest request, HttpResponse response, String path, Model model) {
+        if(!model.isEmpty()) {
+            Collection<User> users = (Collection<User>) model.getAttribute("users");
+        }
+
+        if(!path.endsWith(SUFFIX)) {
+            path = path + SUFFIX;
+        }
+
         if(path.startsWith(REDIRECT)) {
             path = parseRedirect(path);
             response.put(CONTENT_TYPE, Mime.getMime(path).getContentType() + UTF_8);
@@ -107,13 +124,17 @@ public class DefaultHandlerAdapter implements HandlerAdapter {
             }
             path = WEBAPP_PATH + path;
             response.put(CONTENT_TYPE, Mime.getMime(path).getContentType() + UTF_8);
-            byte[] body = Files.readAllBytes(new File(path).toPath());
+            String html = Files.readString(new File(path).toPath());
+            if(!model.isEmpty()) {
+                html = TemplateEngine.render(html, model);
+            }
+            byte[] body = html.getBytes(StandardCharsets.UTF_8);
             response.put(CONTENT_LENGTH, String.valueOf(body.length));
             response.setVersion(HttpVersion.HTTP_1_1);
             response.setStatus(HttpStatus.OK);
             response.setBody(body);
         } catch (IOException e) {
-            log.error(e.getMessage());
+            log.error("setResponse IOE Error: " + e.getMessage());
         }
     }
 }
